syntax = "proto3";
package pb;
option go_package = "./pb";

import "idl/enum.proto";

//request ,notice, ack are for tcp conn

message Request {
  string request_id = 1;
  string token = 2;
  bytes data = 3;
  uint32 type = 4;
}

message Notice {
  string notice_id = 1;
  bytes data = 2;
  uint32 type = 3;
}

message Ack {
  AckType type = 1;
  string  id = 2;
  uint32  code = 3;
  string message = 4; // 错误信息
  bytes data = 5; // 数据
}